<resources>
    <string name="app_name">Unfuck ZUI Tablet</string>
    <string name="xposed_description">Make your Lenovo ZUI tablet less fucked up</string>

    <string name="disable_taskbar_title">Disable taskbar</string>
    <string name="disable_taskbar_summary">Doesn’t take effect if also available in system settings</string>

    <string name="disable_force_stop_title">Disable remove-to-force-stop</string>
    <string name="disable_force_stop_summary">In overview screen (app switcher)</string>

    <string name="category_appearance">Appearance</string>
    <string name="honor_notification_smallicon_title">Honor notification icon set by application</string>
    <string name="honor_notification_smallicon_summary">instead of being replaced by app icon</string>
    <string name="package_installer_style_title">AOSP-style package installer</string>
    <string name="permission_controller_style_title">AOSP-style permission controller</string>
    <string name="category_behavior">Behavior</string>
    <string name="allow_disable_dax_title">Allow disable Dolby Atmos for builtin speakers</string>
    <string name="disable_virus_scan_title">Disable virus scan</string>
    <string name="category_about">About</string>
    <string name="version_title">Module version</string>
    <string name="show_launcher_icon">Show launcher icon</string>
    <string name="action_reload_settings">Reload settings now</string>
    <string name="message_no_apps_to_reload">No apps to reload</string>
    <string name="message_no_root_permission">No root permission</string>
    <string name="message_su_invocation_failed">su invocation failed</string>
    <string name="message_manual_reload">Please restart apps in scope manually, or reboot your device</string>
    <string name="message_module_not_enabled">Module not enabled</string>
    <string name="fix_guest_user_title">Don’t auto create guest user</string>
    <string name="fix_guest_user_summary">If multi-user is not enabled</string>
    <string name="rom_region">ROM region</string>
    <string name="allow_get_packages_title">Always allow query installed packages</string>
    <string name="allow_get_packages_summary">The system feature does not work well. Use Hide My Applist instead if needed</string>
    <string name="default_portrait_title">Change default rotation to portrait</string>
    <string name="cn_rom_only">PRC ROM specific</string>
    <string name="default_enable_autorun_title">Enable app auto start by default</string>
    <string name="no_charge_animation_title">Disable fullscreen charge animation</string>
    <string name="no_permission_reload_title">No permission to reload packages</string>
    <string name="no_permission_reload_message">Neither root shell nor Shizuku is available.\nPlease restart apps in scope manually, or reboot your device.</string>
    <string name="adjust_settings_split_title">Adjust condition of split settings</string>
    <string name="adjust_settings_split_summary">Don\'t split on portrait Y700</string>
    <string name="unlock_cn_gms_title">Remove CN Google Play Services restrictions</string>
    <string name="unlock_cn_gms_summary">Enable Cross Device Services, Quick Share, Play Store self-update and more</string>
    <string name="disable_game_helper_popup_title">Disable game helper activation popup</string>
    <string name="change_task_timeout_title">Change inactive task timeout to 7 days</string>
    <string name="change_task_timeout_summary">Inactive tasks will be removed from task switcher after timeout (AOSP defaults to 6 hours)</string>
</resources>